src/test/ui/const-generics/defaults/needs-feature.min.stderr
error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/needs-feature.rs:9:26
   |
LL | struct A<const N: usize, T = u32>(T);
   |                          ^^^^^^^

error: aborting due to previous error

